appId: com.daivbharathi.daiv
---
# List of reels available - 4

# Reel 1: daiv Clips
- assertVisible: "Daiv\nUser Audio\ndaiv Clips"

- scrollUntilVisible:
    element: "Daiv\nUser Audio\ndaiv Clips"
- takeScreenshot: "002_reel1_scrolled_into_view"

- tapOn: "Daiv\nUser Audio\ndaiv Clips"
- waitForAnimationToEnd
- takeScreenshot: "003_reel1_opened"

- assertVisible: "Back"
- tapOn: "Back"
- takeScreenshot: "005_reel1_back_to_list"

# Reel 2: Avatar
- assertVisible: "Daiv\nUser Audio\nAvatar"

- scrollUntilVisible:
    element: "Daiv\nUser Audio\nAvatar"
- takeScreenshot: "007_reel2_scrolled_into_view"

- tapOn: "Daiv\nUser Audio\nAvatar"
- takeScreenshot: "008_reel2_opened"

- assertVisible: "Back"
- takeScreenshot: "009_reel2_back_button_visible"

- tapOn: "Back"
- takeScreenshot: "010_reel2_back_to_list"

# Reel 3: testing
- assertVisible: "Daiv\nUser Audio\ntesting "

- scrollUntilVisible:
    element: "Daiv\nUser Audio\ntesting "
- takeScreenshot: "012_reel3_scrolled_into_view"

- tapOn: "Daiv\nUser Audio\ntesting "
- waitForAnimationToEnd
- takeScreenshot: "013_reel3_opened"

- assertVisible: "Back"
- takeScreenshot: "014_reel3_back_button_visible"

- tapOn: "Back"
- takeScreenshot: "015_reel3_back_to_list"

# Reel 4: Lord Vishnu Dashavatar
- assertVisible: "Daiv\nUser Audio\nLord Vishnu Dashavatar"

- scrollUntilVisible:
    element: "Daiv\nUser Audio\nLord Vishnu Dashavatar"
- takeScreenshot: "017_reel4_scrolled_into_view"

- tapOn: "Daiv\nUser Audio\nLord Vishnu Dashavatar"
- waitForAnimationToEnd
- takeScreenshot: "018_reel4_opened"

- assertVisible: "Back"
- takeScreenshot: "019_reel4_back_button_visible"

- tapOn: "Back"
- takeScreenshot: "020_reel4_back_to_list"





